--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <div>
     <h1>Hello Webpack: SMTP</h1>
   </div>
+  <div id="app"></div>
   <script src="./bundle.js"></script>
 </body>
 </html>
