--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React with webpack: SMTP</title>
+  <link rel="stylesheet" href='./css/styles.css' />
 </head>
+<header>
+  <div class="logo-wrap">
+    <img src="./Images/SMTPlogo.png" />
+  </div>
+</header>
 <body>
   <div>
     <h1>Hello Webpack: SMTP</h1>
