header with logo responsive, no margins on body

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href='./css/styles.css' />
 </head>
 <header>
-  <div class="logo-wrap">
-    <img src="./Images/SMTPlogo.png" />
+  <div class="logo-contain">
+      <img src="./Images/SMTPlogo.png" />
   </div>
 </header>
 <body>
