create and style nav to right use position prop, add img underneath

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,21 @@
   </div>
 </header>
 <body>
+  <div class="nav-contain">
+    <div class="nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Mobile App</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Facebook</a></li>
+      </ul>
+    </div>
+    <div class="not-found-img">
+      <img src="./Images/finding-brand.png" alt="request a brand button">
+    </div>
+  </div>
   <div>
     <h1>Hello Webpack: SMTP</h1>
   </div>
