add link around notfoundimg, make responsive

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <div class="not-found-img">
-      <img src="./Images/finding-brand.png" alt="request a brand button">
+      <a href="#"><img src="./Images/finding-brand.png" alt="request a brand button"></a>
     </div>
   </div>
   <div>
