create part info section and first 2-col flexbox

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,21 @@
       </ul>
     </div>
     <div class="not-found-img">
-      <a href="#"><img src="./Images/finding-brand.png" alt="request a brand button"></a>
+      <a href="#"><img src="./Images/finding-brand.png" alt="Request a brand"></a>
     </div>
   </div>
+  <section id="feature">
+    <div class="flex-container col-container features">
+      <div class="flex-1">
+        <h1 id="part-headline">Dorman - HELP 00051 Battery Hold Down Bolt</h1>
+        <a href="{GetBuyLink}"><img src="./Images/buy-now.png" alt="Buy Part Now"/></a>
+        <p class="" style="padding-top:20px;"><em>ShowMeTheParts has a wide selection of Dorman - HELP products for a variety of years, makes, and models.</em></p>
+      </div>
+      <div class="flex-2">
+
+      </div>
+    </div>
+  </section>
   <div>
     <h1>Hello Webpack: SMTP</h1>
   </div>
