add battery image to parts section with padding

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <h1 id="part-headline">Dorman - HELP 00051 Battery Hold Down Bolt</h1>
         <a href="{GetBuyLink}"><img src="./Images/buy-now.png" alt="Buy Part Now"/></a>
         <p class="" style="padding-top:20px;"><em>ShowMeTheParts has a wide selection of Dorman - HELP products for a variety of years, makes, and models.</em></p>
+        <img class="battery" src="./Images/battery-bolt.jpg" style="padding:25px;" alt="Battery Hold Down Bolt">
       </div>
       <div class="flex-2">
 
