files and root node set up for header-nav react.js comp

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <div class="logo-contain">
       <img src="./Images/SMTPlogo.png" />
   </div>
+  <div class="nav">
+    
+  </div>
 </header>
 <body>
   <div class="nav-contain">
