webpack compiling both header.js, index.js entry points to 1 bundle

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <div class="logo-contain">
       <img src="./Images/SMTPlogo.png" />
   </div>
-  <div class="nav">
-    
+  <div id="nav">
+
   </div>
 </header>
 <body>
