remove static nav from index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 </header>
 <body>
-  <div class="nav-contain">
+  <!-- <div class="nav-contain">
     <div class="nav">
       <ul>
         <li><a href="#">Home</a></li>
@@ -31,7 +31,7 @@
     <div class="not-found-img">
       <a href="#"><img src="./Images/finding-brand.png" alt="Request a brand"></a>
     </div>
-  </div>
+  </div> -->
   <section id="feature">
     <div class="flex-container col-container features">
       <div class="flex-1">
