create ImgMaker component without css; remove console logs from components;

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     </div>
   </div> -->
   <section id="feature">
-    <div class="flex-container col-container features">
+    <!-- <div class="flex-container col-container features">
       <div class="flex-1">
         <h1 id="part-headline">Dorman - HELP 00051 Battery Hold Down Bolt</h1>
         <a href="https://www.showmetheparts.com/?partno=00051&logkey=LPR&partkey=007381408&verify=c6cc1c4c-f262-47ee-aa39-c2627869b5e1"><img src="./Images/buy-now.png" alt="Buy Part Now"/></a>
@@ -43,7 +43,7 @@
       <div class="flex-2">
 
       </div>
-    </div>
+    </div> -->
   </section>
   <div id="app"></div>
   <script src="./bundle.js"></script>
