--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
 </header>
 <body>
   <div id="app"></div>
+  <div class="container" id="no-gap">
+    <div class="contain">
+      <a class="section-head" href="#">
+        <img src="./Images/buy-now.png"  />
+      </a>
+
+    </div>
+
+  </div>
   <script src="./bundle.js"></script>
 </body>
 </html>
