create footer with border top

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
     </div>
 
   </div>
+  <div class="container">
+    <footer class="section-head" id="foot">
+      <p>
+        &copy; 2021 hicksey-makes
+      </p>
+    </footer>
+  </div>
+
   <script src="./bundle.js"></script>
 </body>
 </html>
